--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<laputa-header></laputa-header>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<laputa-footer></laputa-footer>
