--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,3 @@
-<ul>
-  <li *ngFor="let platform of platforms">
-    <a [routerLink]="['/platforms', platform.slug]">
-      {{ platform.label }}
-    </a>
-  </li>
-</ul>
-
-<ul>
-  <li *ngFor="let genre of genres">
-    <a [routerLink]="['/genres', genre.slug]">
-      {{ genre.label }}
-    </a>
-  </li>
-</ul>
-
+<h2>推荐游戏</h2>
 <laputa-game-list [games]="featuredGames"></laputa-game-list>
+
