--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,3 +7,8 @@ $body-bg-color: #171C28;
 $platform-color-nintendo-switch: #E60012;
 $platform-color-xbox: #107c10;
 $platform-color-steam: #136c9e;
+
+$loading-color-yellow: #F6D87C ;
+$loading-color-green: #57CA81;
+$loading-color-red: #D04863;
+$loading-color-blue: #23C4F8;
