--- a/src/app/shared/game-tile/game-tile.component.html
+++ b/src/app/shared/game-tile/game-tile.component.html
@@ -1,22 +1,24 @@
-<div class="tile">
+<a class="tile" [routerLink]="['/games', game.sys.id]">
   <div class="basic-information">
-    <laputa-game-cover [cover]="game.cover"></laputa-game-cover>
+    <laputa-game-cover [cover]="game.fields.cover"></laputa-game-cover>
     <div class="platforms-and-rating">
       <div class="platforms">
-        <laputa-game-platform *ngFor="let platform of game.platforms"
+        <laputa-game-platform *ngFor="let platform of game.fields.platforms"
                               [name]="platform.fields.label"></laputa-game-platform>
       </div>
-      <laputa-game-rating [rating]="game.rating"></laputa-game-rating>
+      <laputa-game-rating [rating]="game.fields.rating"></laputa-game-rating>
     </div>
   </div>
 
   <div class="extra-information">
-    <h3 class="name">{{ game.name }}</h3>
+    <h3 class="name">
+      {{ game.fields.name }}
+    </h3>
 
     <div class="genres">
       <laputa-game-genre [genre]="genre.fields.label"
-                         *ngFor="let genre of game.genres"></laputa-game-genre>
+                         *ngFor="let genre of game.fields.genres"></laputa-game-genre>
     </div>
   </div>
 
-</div>
+</a>
