--- a/src/app/shared/game-tile/game-tile.component.scss
+++ b/src/app/shared/game-tile/game-tile.component.scss
@@ -9,6 +9,7 @@
 
 .tile {
   position: relative;
+  display: block;
   height: 100%;
   padding: 0 20px 20px;
   background: #000;
@@ -18,6 +19,7 @@
   &:hover{
     border-color: $primary;
     transform: scale(1.03);
+    text-decoration: none;
   }
 }
 
@@ -56,6 +58,11 @@
 }
 
 .name {
-  color: #E4ECFA;
+  color: $primary;
   font-size: 16px;
+  font-weight: normal;
+}
+
+.genres {
+  color: #6C7486;
 }
