--- a/src/app/header/brand/brand.component.scss
+++ b/src/app/header/brand/brand.component.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 :host {
   display: block;
 }
@@ -36,5 +38,5 @@
   align-self: center;
   margin-left: 10px;
   font-size: 12px;
-  color: #6C7486;
+  color: $light-2;
 }
