--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,10 @@
 <ng-container *ngIf="featuredGames && latestGames; else loading">
   <div class="featured-games">
-    <h2>推荐游戏</h2>
-    <laputa-game-list [games]="featuredGames"></laputa-game-list>
+    <laputa-game-list caption="推荐游戏" [games]="featuredGames"></laputa-game-list>
   </div>
 
   <div class="latest-games">
-    <h2>最近更新</h2>
-    <laputa-game-list [games]="latestGames"></laputa-game-list>
+    <laputa-game-list caption="最近更新" [games]="latestGames"></laputa-game-list>
   </div>
 </ng-container>
 
