--- a/src/app/shared/game-cover/game-cover.component.scss
+++ b/src/app/shared/game-cover/game-cover.component.scss
@@ -1,5 +1,6 @@
 :host {
   display: block;
+  overflow: hidden;
   height: 100%;
 }
 
@@ -8,4 +9,6 @@
   height: 100%;
   object-fit: cover;
   object-position: 50% 0;
+
+  transition: .2s ease;
 }
