--- a/src/app/shared/game-list/game-list.component.scss
+++ b/src/app/shared/game-list/game-list.component.scss
@@ -1,10 +1,19 @@
+@import "variables";
+
 :host {
   display: block;
   margin: 0 auto;
   max-width: 1200px;
 }
 
-.laputa-game-list {
+.caption {
+  padding: 0 20px;
+  font-size: 20px;
+  font-weight: 300;
+  color: $light-4;
+}
+
+.list {
   display: flex;
   flex-wrap: wrap;
   justify-content: left;
