--- a/src/app/shared/game-tile/game-tile.component.scss
+++ b/src/app/shared/game-tile/game-tile.component.scss
@@ -2,24 +2,28 @@
 
 :host {
   display: block;
-  padding: 20px 20px 20px 20px;
+  padding: 20px;
   width: 25%;
-  color: #6C7486;
 }
 
 .tile {
   position: relative;
   display: block;
+  overflow: hidden;
   height: 100%;
   padding: 0 20px 20px;
   background: #000;
   border: 1px solid transparent;
+  border-radius: 4px;
   transition: all ease-in .2s;
 
   &:hover{
     border-color: $primary;
-    transform: scale(1.03);
     text-decoration: none;
+
+    ::ng-deep .cover {
+      transform: scale(1.08) rotate(-0.3deg);
+    }
   }
 }
 
@@ -64,5 +68,5 @@
 }
 
 .genres {
-  color: #6C7486;
+  color: $light-2;
 }
