Update Rating styles to support 10 score rating

--- a/src/app/shared/game-headline/game-headline.component.html
+++ b/src/app/shared/game-headline/game-headline.component.html
@@ -1,2 +1,2 @@
 <h2 class="caption">{{ title }}</h2>
-<p class="count" *ngIf="count">共 {{ count }} 款游戏</p>
+<p class="count tabular-number" *ngIf="count">共 {{ count }} 款游戏</p>
