--- a/src/app/shared/game-rating/game-rating.component.html
+++ b/src/app/shared/game-rating/game-rating.component.html
@@ -1,3 +1,6 @@
 <div class="rating">
-  <fa-icon icon="star" size="sm" *ngFor="let i of ratingRange"></fa-icon>
+  <span class="rating-number tabular-number">
+    {{ rating }}
+  </span>
+  <fa-icon icon="star" size="sm"></fa-icon>
 </div>
