--- a/src/app/header/nav-item-genres/nav-item-genres.component.html
+++ b/src/app/header/nav-item-genres/nav-item-genres.component.html
@@ -1,6 +1,6 @@
 <ng-container>
   <button class="nav-item-trigger">
-    <span class="trigger-label">游戏类别</span>
+    <span class="trigger-label">游戏风格</span>
     <fa-icon icon="angle-down"></fa-icon>
   </button>
   <ul class="nav-children" *ngIf="children$ | async as children">
