--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-
+$dark-0: #000000;
 $dark-1: #121621;
 $dark-2: #171C28;
 $dark-3: #242836;
@@ -25,3 +25,5 @@ $loading-color-yellow: #F6D87C;
 $loading-color-green: #57CA81;
 $loading-color-red: #D04863;
 $loading-color-blue: #23C4F8;
+
+$font-tabular-number: 'Titillium Web', monospace;
