--- a/src/app/header/nav/nav.component.html
+++ b/src/app/header/nav/nav.component.html
@@ -1,5 +1,9 @@
 <nav>
   <ul class="nav">
+    <li laputaNavItem routerLinkActive="nav-item-active"
+        [routerLinkActiveOptions]="{ exact: true }">
+      <a routerLink="/games">所有游戏</a>
+    </li>
     <li laputaNavItem>
       <laputa-nav-item-platforms></laputa-nav-item-platforms>
     </li>
