--- a/src/app/shared/pagination/pagination.component.html
+++ b/src/app/shared/pagination/pagination.component.html
@@ -1,3 +1,6 @@
-<p>
-  pagination works!
-</p>
+<div class="pagination">
+  <a [routerLink]="link" [queryParams]="{ page: page }"
+     class="pagination-item"
+     [ngClass]="{ 'active': page === current }"
+     *ngFor="let page of pages">{{ page }}</a>
+</div>
