--- a/src/app/header/nav/nav.component.html
+++ b/src/app/header/nav/nav.component.html
@@ -2,7 +2,7 @@
   <ul class="nav">
     <li laputaNavItem routerLinkActive="nav-item-active"
         [routerLinkActiveOptions]="{ exact: true }">
-      <a routerLink="/games">所有游戏</a>
+      <a routerLink="/games/all">所有游戏</a>
     </li>
   </ul>
 </nav>
