--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <h3>游戏平台</h3>
     <ul *ngIf="platforms$ | async as platforms">
       <li *ngFor="let platform of platforms">
-        <a routerLink [queryParams]="{ platform: platform.slug }"
+        <a routerLink="/games" [queryParams]="{ platform: platform.slug }"
            (click)="onPlatformSelected(platform.slug)"
            [class.active]="platform.slug === selectedPlatform">
           <laputa-game-platform-icon [platformName]="platform.name"></laputa-game-platform-icon>
@@ -13,20 +13,25 @@
       </li>
     </ul>
   </aside>
-  <section class="games-lists">
-    <ng-container *ngIf="shouldDisplayLandingGames">
-      <div class="featured-games">
-        <laputa-game-list caption="推荐游戏" [games]="featuredGames"></laputa-game-list>
-      </div>
-      <div class="latest-games">
-        <laputa-game-list caption="最近更新" [games]="latestGames"></laputa-game-list>
-      </div>
-    </ng-container>
-    <ng-container *ngIf="!shouldDisplayLandingGames">
-      <laputa-game-list [caption]="queryCaption" [count]="queryCount" [games]="queryGames">
-      </laputa-game-list>
-    </ng-container>
-  </section>
+  <div class="content">
+    <section *ngIf="!isGamesLoading; else gameLoading">
+      <ng-container *ngIf="shouldDisplayLandingGames">
+        <div class="featured-games">
+          <laputa-game-list caption="推荐游戏" [games]="featuredGames"></laputa-game-list>
+        </div>
+        <div class="latest-games">
+          <laputa-game-list caption="最近更新" [games]="latestGames"></laputa-game-list>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="!shouldDisplayLandingGames">
+        <laputa-game-list [caption]="queryCaption" [count]="queryCount" [games]="queryGames">
+        </laputa-game-list>
+      </ng-container>
+    </section>
+    <ng-template #gameLoading>
+      <laputa-spinner></laputa-spinner>
+    </ng-template>
+  </div>
 </div>
 
 <ng-template #loading>
