--- a/src/app/shared/pagination/pagination.component.scss
+++ b/src/app/shared/pagination/pagination.component.scss
@@ -4,10 +4,11 @@
   display: block;
 }
 
-.pagination {
+.pagination ul {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  list-style: none;
 }
 
 .pagination-item {
@@ -18,15 +19,16 @@
   text-decoration: none;
   border-radius: 4px;
   color: $light-3;
+  cursor: pointer;
 
   &:hover {
     color: white;
-    background: darken($primary, 20);
+    background: $primary;
   }
 
   &.active {
     transform: scale(1.1);
     color: white;
-    background: darken($primary, 20);
+    background: $primary;
   }
 }
