--- a/src/app/games/home/home.component.scss
+++ b/src/app/games/home/home.component.scss
@@ -2,91 +2,57 @@
 
 .main {
   display: flex;
-}
-
-aside {
-  margin-top: 40px;
-  padding: 0 20px;
-  width: 240px;
-
-  h3 {
-    margin-top: 20px;
-    &:first-child { margin-top: 0; }
-  }
-
-  ul {
-    margin-top: 10px;
-  }
-
-  li {
-    margin: 2px 0;
-  }
-
-  a {
-    display: flex;
-    align-items: center;
-    margin: 8px 0;
-    padding: 4px 10px;
-    color: $body-text;
-    border-radius: 4px;
-    background: rgba($dark-3, 0.2);
-    transition: .2s ease;
-    text-decoration: none;
-
-    &:hover,
-    &.active {
-      color: white;
-      background: $primary;
-    }
-  }
-
-  .label {
-    margin-left: 5px;
-    flex: 1;
-  }
-
-  .active .remove {
-    align-self: flex-end;
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
-    line-height: normal;
-  }
+  margin: 0 auto 40px;
+  max-width: $max-container-width-large;
 }
 
 .content {
   flex: 1;
   position: relative;
-  margin: 40px 10px 0;
+  margin: 0 auto;
   min-height: calc(100vh - 100px);
 }
 
-.content ::ng-deep {
-  laputa-game-tile {
-    padding: 15px;
-  }
-
-  .tile {
-    padding: 0 15px 15px;
-  }
-
-  .basic-information {
-    height: 200px;
-  }
-
-  .extra-information {
-    margin-top: 15px;
-  }
-}
-
-.featured-games {
-}
-
+.featured-games,
 .latest-games {
-  margin-top: 40px;
+
+  &::ng-deep {
+    .headline {
+      margin-bottom: 0;
+      text-align: left;
+    }
+  }
 }
 
-laputa-pagination {
-  margin: 20px 0;
-  padding: 0 10px;
+.more-featured-games {
+  margin-top: 30px;
+  text-align: center;
 }
+
+.see-more-featured-games {
+  position: relative;
+  display: inline-block;
+  padding: 10px;
+  color: $light-4;
+  border: 1px solid $dark-0;
+  border-radius: 4px;
+  background: none;
+  cursor: pointer;
+  transition: .3s ease;
+
+  fa-icon {
+    margin-left: 10px;
+  }
+
+  &:hover {
+    background: $dark-0;
+  }
+
+  &:active {
+    top: 1px;
+  }
+}
+
+.latest-games { margin-top: 40px; }
+
+laputa-pagination { margin: 20px 0; }
