--- a/src/app/header/brand/brand.component.scss
+++ b/src/app/header/brand/brand.component.scss
@@ -7,6 +7,7 @@
 .brand {
   display: flex;
   align-items: stretch;
+  justify-content: space-between;
   height: 50px;
 }
 
@@ -38,5 +39,5 @@
   align-self: center;
   margin-left: 10px;
   font-size: 12px;
-  color: $light-2;
+  color: $light-3;
 }
