--- a/src/app/shared/game-list/game-list.component.html
+++ b/src/app/shared/game-list/game-list.component.html
@@ -1,6 +1,6 @@
-<div class="caption" *ngIf="caption">
-  {{ caption }}
-  <small *ngIf="count" class="count">{{ count }} 款游戏</small>
+<div class="headline" *ngIf="caption">
+  <h2 class="caption">{{ caption }}</h2>
+  <p *ngIf="count" class="count">{{ count }} 款游戏</p>
 </div>
 
 <ng-container *ngIf="games?.length > 0">
@@ -11,5 +11,6 @@
 
 
 <div class="list-empty" *ngIf="games?.length === 0">
-  No Games Found.
+  <img src="assets/images/empty.svg" alt="Empty" />
+  <p>这里什么都没有</p>
 </div>
