--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,7 @@ html, body {
 }
 
 body {
-  font: 14px/1.6 Barlow, 'Noto Sans SC', -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif,
+  font: 14px/1.6 Barlow, -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif,
   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: $body-text;
   background: $body-bg-color;
@@ -35,10 +35,6 @@ a {
   color: $primary;
   text-decoration: none;
   transition: .2s ease;
-
-  &:hover {
-   text-decoration: underline;
-  }
 }
 
 ul { list-style: none; }
