--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,7 +14,7 @@ $primary: #23C4F8;
 $secondary: #8C6FF0;
 
 $body-text: $light-3;
-$body-bg-color: $dark-1;
+$body-bg-color: $dark-2;
 
 $platform-color-nintendo-switch: #E60012;
 $platform-color-xbox: #107c10;
@@ -25,3 +25,5 @@ $loading-color-yellow: #F6D87C;
 $loading-color-green: #57CA81;
 $loading-color-red: #D04863;
 $loading-color-blue: #23C4F8;
+
+$max-container-width-large: 1200px;
