--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 :host {
   display: block;
   background: #000;
@@ -7,8 +9,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1400px;
+  max-width: $max-container-width-large + 50px;
   margin: 0 auto;
+  padding: 0 15px;
   color: white;
 }
 
