--- a/src/app/header/brand/brand.component.html
+++ b/src/app/header/brand/brand.component.html
@@ -1,6 +1,6 @@
 <div class="brand">
   <a routerLink="/" title="Laputa">
-    <fa-icon [icon]="['fab', 'fort-awesome-alt']" size="2x"></fa-icon>
+    <img src="assets/images/logo.svg" alt="Laputa"/>
     <span class="name">Laputa</span>
     <sup class="indicator">
       <fa-icon icon="home" size="xs"></fa-icon>
