--- a/src/app/header/brand/brand.component.scss
+++ b/src/app/header/brand/brand.component.scss
@@ -14,9 +14,15 @@
 .brand a {
   display: flex;
   align-items: center;
+  padding: 8px 0;
   text-decoration: none;
-  color: #F6D87C;
+  color: $light-4;
   transition: .2s ease;
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
 
 .brand a:hover {
@@ -24,9 +30,10 @@
 }
 
 .name {
-  margin-left: 10px;
-  font-size: 20px;
-  font-family: 'Titillium Web', -apple-system, sans-serif;
+  margin-left: 5px;
+  font-size: 16px;
+  font-family: Righteous, -apple-system, sans-serif;
+  text-transform: uppercase;
   letter-spacing: 2px;
 }
 
