Completed Flag on Game Tile

--- a/src/app/shared/game-tile/game-tile.component.html
+++ b/src/app/shared/game-tile/game-tile.component.html
@@ -8,6 +8,9 @@
       </div>
       <laputa-game-rating *ngIf="game.fields.rating" [rating]="game.fields.rating"></laputa-game-rating>
     </div>
+    <span class="completed" *ngIf="game.fields.completed" title="已通关">
+        <fa-icon [icon]="['far', 'check-circle']"></fa-icon>
+      </span>
   </div>
 
   <div class="extra-information">
